fixed title-stripe on mobil, added styles form on tablet (inquirer, program, cat-owner)

--- a/source/sass/blocks/form-content.scss
+++ b/source/sass/blocks/form-content.scss
@@ -13,7 +13,27 @@
 .form-content__text-help {
   @include Oswald-uppercase;
   font-size: 14px;
-  margin-left: 20px;
-  margin-right: 30px;
+  padding-left: 20px;
+  padding-right: 30px;
   margin-top: 25px;
+}
+
+@media (min-width: $tablet-width) {
+  .form-content {
+    @include content-tablet;
+    border-top: none;
+  }
+
+  .form-content__title {
+    @include margin-tablet;
+    padding-top: 36px;
+  }
+
+  .form-content__text-help {
+    @include margin-form;
+    width: 65%;
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 55px;
+  }
 }
