--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -7,6 +7,10 @@
   padding-bottom: 25px;
 }
 
+.main-footer__link:hover {
+  opacity: 0.8;
+}
+
 .main-footer__link:active {
   opacity: 0.6;
 }
