--- a/source/sass/blocks/title-stripe.scss
+++ b/source/sass/blocks/title-stripe.scss
@@ -48,6 +48,10 @@
     line-height: 36px;
     padding-bottom: 5px;
   }
+
+  .title-stripe__wrapper {
+    max-width: 100%
+  }
 }
 
 @media (min-width: $desktop-width) {
